--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -412,7 +412,7 @@
             <div class="row justify-content-center" style="height: 75vh">
                 <div class="align-self-center"style="width: 100%">
                     <div class="box">
-                        <div class="align-self-center" id="clock-charts" style="height: 60vh; width: 100%"></div>
+                        <div class="align-self-center" id="clock-charts" style="width: 100%"></div>
                     </div>
                 </div>
             </div>
@@ -435,6 +435,9 @@
                     <h2>The pandemic has shifted the time people spend on certain activities.
                         Although almost two years has passed since the start of the global pandemic,
                         those living in the US are still adapting to the drastic changes that have resulted from COVID-19. </h2>
+                    <h2>Because of remote work, people were able to spend more time on leisure. But, COVID restrictions also made it tougher
+                    for people to spend time on volunteering or religious activities. There are interesting and large changes by group (age, sex, etc)
+                     in time usage patterns.</h2>
                 </div>
                 <div class="row">
                     <div class="column2">
